Link to docs instead of feedback page

--- a/lib/plausible_web/templates/layout/app.html.eex
+++ b/lib/plausible_web/templates/layout/app.html.eex
@@ -31,7 +31,7 @@
                     </li>
                   <% else %>
                     <li class="mr-6 hidden sm:block">
-                      <%= link("Give feedback", to: "/feedback", class: "font-bold rounded p-2 hover:bg-gray-200", style: "line-height: 40px;") %>
+                      <%= link("Docs", to: "https://docs.plausible.io", class: "font-bold rounded p-2 hover:bg-gray-200", style: "line-height: 40px;", target: "_blank") %>
                     </li>
                   <% end %>
                   <li>
