Add unubscribe link to transactional emails

--- a/lib/plausible_web/templates/email/trial_over_email.html.eex
+++ b/lib/plausible_web/templates/email/trial_over_email.html.eex
@@ -14,4 +14,5 @@ Founder, Plausible Analytics
 <br /><br />
 --
 <br /><br />
-<%= plausible_url() %>
+<%= plausible_url() %><br />
+{{{ pm:unsubscribe }}}
