--- a/lib/plausible_web/templates/email/trial_one_week_reminder.html.eex
+++ b/lib/plausible_web/templates/email/trial_one_week_reminder.html.eex
@@ -10,4 +10,5 @@ If you have any questions or feedback for me, feel free to reply to this email.
 <br /><br />
 Thanks,<br />
 Uku Taht<br />
-<%= plausible_url() %>
+<%= plausible_url() %><br />
+{{{ pm:unsubscribe }}}
