--- a/lib/plausible_web/templates/layout/_footer.html.eex
+++ b/lib/plausible_web/templates/layout/_footer.html.eex
@@ -83,7 +83,7 @@
               </li>
               <li class="mt-4">
                 <a target="_blank" href="https://fosstodon.org/@plausible" class="text-base leading-6 text-gray-300 hover:text-white">
-                  Fosstodon
+                  Mastodon
                 </a>
               </li>
             </ul>
