Sefhosting improvements/fixes (#275)
* first commit with test and compile job

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* adding 'prepare' stage

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* updated ci script to include "test" compile phase

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* adding environment variables for connecting to postgresql

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* updated ci config for postgres

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* using non-alpine version of elixir

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* re-using the 'compile' artifacts and added explict env variables for testing

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* removing redundant deps fetching from common code

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* formatting using mix.format -- beware no-code changes!

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* added release config

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* adding consistent env variable for Database

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* more cleaning up of environment variables

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* Adding releases config for enabling releases

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* cleaning up env configs

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* Cleaned up config and prepared config for releases

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* updated CI script with new config for test

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* Added Dockerfile for creating production docker image

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* Adding "docker" build job yay!

Signed-off-by: Chandra Tungathurthi <tckb@tgrthi.me>

* using non-slim version of debian and installing webpack

Signed-off-by: Chandra Tungathu

--- a/lib/plausible_web/templates/layout/_footer.html.eex
+++ b/lib/plausible_web/templates/layout/_footer.html.eex
@@ -20,22 +20,22 @@
             </h4>
             <ul class="mt-4">
               <li>
-                <a href="/simple-web-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/simple-web-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
                   Simple Metrics
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/lightweight-web-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/lightweight-web-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
                   Lightweight script
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/data-policy" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/data-policy" class="text-base leading-6 text-gray-300 hover:text-white">
                   GDPR Compliant
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/open-source-website-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/open-source-website-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
                   Open source
                 </a>
               </li>
@@ -47,12 +47,12 @@
             </h4>
             <ul class="mt-4">
               <li>
-                <a href="/vs-google-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/vs-google-analytics" class="text-base leading-6 text-gray-300 hover:text-white">
                   vs Google Analytics
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/vs-matomo" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/vs-matomo" class="text-base leading-6 text-gray-300 hover:text-white">
                   vs Matomo
                 </a>
               </li>
@@ -94,22 +94,22 @@
             </h4>
             <ul class="mt-4">
               <li class="mt-4">
-                <a href="/about" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/about" class="text-base leading-6 text-gray-300 hover:text-white">
                   About
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/blog" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/blog" class="text-base leading-6 text-gray-300 hover:text-white">
                   Blog
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/contact" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/contact" class="text-base leading-6 text-gray-300 hover:text-white">
                   Contact
                 </a>
               </li>
               <li class="mt-4">
-                <a href="/privacy" class="text-base leading-6 text-gray-300 hover:text-white">
+                <a href="https://plausible.io/privacy" class="text-base leading-6 text-gray-300 hover:text-white">
                   Privacy
                 </a>
               </li>
