Add HCaptcha support (#304)
* Add HCaptcha support

* Actually verify password reset requests

* Fix password request when captcha not configured

* Add configuration for prod release

--- a/lib/plausible_web/templates/auth/password_reset_request_form.html.eex
+++ b/lib/plausible_web/templates/auth/password_reset_request_form.html.eex
@@ -7,5 +7,16 @@
   <%= if @conn.assigns[:error] do %>
     <div class="text-red-500 text-xs italic my-2"><%= @conn.assigns[:error] %></div>
   <% end %>
+
+  <%= if PlausibleWeb.Captcha.enabled?() do %>
+    <div class="mt-4">
+      <div class="h-captcha" data-sitekey="<%= PlausibleWeb.Captcha.sitekey() %>"></div>
+      <%= if assigns[:captcha_error] do %>
+        <div class="text-red-500 text-xs italic mt-3"><%= @captcha_error %></div>
+      <% end %>
+      <script src="https://hcaptcha.com/1/api.js" async defer></script>
+    </div>
+  <% end %>
+
   <%= submit "Send reset link →", class: "button mt-4 w-full" %>
 <% end %>
